--- a/WebSocketClient.html
+++ b/WebSocketClient.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 	<head>
-		<script type="text/javascript" src="paho-mqtt.js"></script>
-		<script type="text/javascript" src="paho-mqtt-min.js"></script>
+		<script type="text/javascript" src="./paho-mqtt.js"></script>
+		<script type="text/javascript" src="./paho-mqtt-min.js"></script>
 		
 		<script languange="javascript">
 
