--- a/WebSocketClient.html
+++ b/WebSocketClient.html
@@ -1,8 +1,8 @@
 
 <html>
 	<head>
-		<script type="text/javascript" src="https://maimaduddin.github.io/basic/paho-mqtt.js"></script>
-		<script type="text/javascript" src="https://maimaduddin.github.io/basic/paho-mqtt-min.js"></script>
+		<script src="https://maimaduddin.github.io/basic/paho-mqtt.js"></script>
+		<script src="https://maimaduddin.github.io/basic/paho-mqtt-min.js"></script>
 		
 		<script languange="javascript">
 
